--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "loftschool-builder",
+  "name": "builder",
   "version": "1.0.0",
   "ignore": [
     "**/.*",
@@ -7,6 +7,7 @@
     "bower_components"
   ],
   "dependencies": {
-    "jquery": "2.1.3"
+    "jquery": "2.1.3",
+    "slick-carousel": "^1.6.0"
   }
 }
